Fixed modal overflow issue

--- a/src/components/app/topBar/topBar.styles.css
+++ b/src/components/app/topBar/topBar.styles.css
@@ -62,7 +62,7 @@ body {
   z-index: 2;
 }
 
-.topBar .modal.open {
+.topBar .modal.transitioningIn, .topBar .modal.open {
   top: calc(50% - 8rem);
   left: calc((100% - 20rem) / 2);
   width: 30rem;
